--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
+
 *,
 *::before,
 *::after {
@@ -7,7 +9,7 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 p,
@@ -70,7 +72,7 @@ ul {
 .nav-link {
   text-decoration: none;
   color: whitesmoke;
-  font-size: 0.89rem;
+  font-size: 1rem;
   transition: 0.3s ease-in-out;
 }
 
