--- a/src/index.css
+++ b/src/index.css
@@ -223,30 +223,10 @@ main {
   margin-inline: auto;
 }
 
-.filters {
-  align-self: center;
-  display: flex;
-  align-items: center;
-  font-size: 0.8rem;
-  padding: 0.2rem;
-  background: var(--bg-color);
-  border: 1px solid var(--box-shadow-1);
-  border-radius: 2rem;
-}
-
-.filters p {
-  padding: 0.6rem 0.7rem;
-  color: var(--box-shadow-3);
-  border: 1px solid transparent;
-  border-radius: 3rem;
-  cursor: pointer;
-}
-
-.filters .active {
-  background: white;
+.filters .latest {
+  font-size: 1.2rem;
+  font-weight: 500;
   color: var(--hovers);
-  border-color: var(--box-shadow-1);
-  box-shadow: 0px 0px 5px var(--box-shadow-1), -0px -0px 5px var(--box-shadow-1);
 }
 
 .some-product {
@@ -349,10 +329,19 @@ main {
 }
 
 .filters-p p {
-  padding: 0.5rem 0.8rem;
-  color: var(--box-shadow-3);
+  padding: 0.5rem;
+  color: var(--box-shadow-2);
   font-size: 0.8rem;
   border-radius: 2rem;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 1rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.filters-p .filter-active {
+  border-color: var(--box-shadow-2);
+  color: var(--hovers);
 }
 
 .products-grid {
